--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ java.targetCompatibility "1.16"
 group = 'edu.rit.iste-422'
 version = '1.0-SNAPSHOT'
 
+apply plugin: 'java'
+
 ext {
     javaMainClass = 'RunEdgeConvert'
 }
@@ -33,11 +35,6 @@ task runEdgeConnectorTest(type: JavaExec) {
     description = "Run EdgeConnectorTest class"
     classpath = sourceSets.test.runtimeClasspath
     main = "EdgeConnectorTest"
-}
-
-task obfuscator(type: JavaExec) {
-    main = 'Obfuscator'
-        classpath = sourceSets.test.runtimeClasspath
 }
 
 repositories {
